--- a/app/views/boards/new.html.erb
+++ b/app/views/boards/new.html.erb
@@ -1,5 +1,7 @@
 <h1>新增看板</h1>
 
-<form action="/boards" method="post">
-<button type="submit">送出</button>
-</form>
+<%= form_for(@board) do |f| %>
+  <%= f.label :title, '看板標題' %>
+  <%= f.text_field :title %>
+  <%= f.submit %>
+<% end %>
