add show and edit page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
   </head>
 
   <body>
-    <p><%= flash["notice"] %></p>
-    <%= yield %>
+    <%= render "shared/navbar" %>
+    <%= render "shared/flash" if notice %>
+    <main class="main-section">
+      <%= yield %>
+    </main>
   </body>
 </html>
