--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -6,6 +6,9 @@
 <% @boards.each do |board| %>
   <li>
     <%= link_to "編輯", edit_board_path(board.id) %>
+    <%= link_to "刪除", board_path(board.id),
+                        method: 'delete',
+                        data: { confirm: '是否確定刪除？' } %>
     <%= link_to board.title, board_path(board.id) %>
   </li>
 <% end %>
