--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -3,6 +3,6 @@
 
 <ul>
   <% @posts.each do |post| %>
-    <li><%= post.title %></li>
+    <li><%= link_to post.title, post %></li>
   <% end %>
 </ul>
