--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,3 +8,12 @@
 </article>
 
 <%= link_to '回上頁', :back %>
+
+<%= form_for(@comment, url: post_comments_path(@post), remote: true) do |f| %>
+  <%= f.text_area :content, placeholder: '請輸入留言' %>
+  <%= f.submit '送出' %>
+<% end %>
+
+<ul class="comment">
+<%= render @comments %>
+</ul>
