--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,15 @@
+<h2>
+  <% if user_signed_in? %>
+    <%= link_to '#', id: 'favorite_btn', data: { id: @post.id } do %>
+      <% if current_user.favorite?(@post) %>
+        <i class="fas fa-heart"></i>
+      <% else %>
+        <i class="far fa-heart"></i>
+      <% end %>
+    <% end %>
+  <% end %>
+</h2>
+
 <h2><%= @post.user.nickname %></h2>
 <h1><%= @post.title %></h1>
 
