--- a/app/frontend/styles/boards.scss
+++ b/app/frontend/styles/boards.scss
@@ -12,3 +12,19 @@ $error_color: red;
     color: $error_color;
   }
 }
+
+.board-title {
+  font-size: 20px;
+  text-decoration: none;
+}
+
+.board-title-open {
+}
+
+.board-title-locked {
+  color: red;
+}
+
+.board-title-hidden {
+  opacity: 0.3;
+}
