--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,9 +2,16 @@
   <ul>
     <li><%= link_to "首頁", root_path %></li>
     <li><%= link_to "看板列表", boards_path %></li>
+    <li><%= link_to "購買點數卡", pricing_path %></li>
   </ul>
   <ul>
     <% if current_user %>
+      <li>
+          <%= link_to cart_path do %>
+            <i class="fas fa-cat"></i>
+            (<%= current_cart.items.count %> / <%= current_cart.total_price %>)
+          <% end %>
+      </li>
       <li><%= current_user.nickname %></li>
       <li><%= link_to "登出", sign_out_users_path, method: 'delete' %></li>
     <% else %>
