--- a/app/views/carts/checkout.html.erb
+++ b/app/views/carts/checkout.html.erb
@@ -1,8 +1,10 @@
+<script src="https://js.braintreegateway.com/web/dropin/1.25.0/js/dropin.min.js"></script>
+
 <h1>結帳</h1>
 
 <%= render 'cart', cart: current_cart %>
 
-<%= form_for(@order) do |form| %>
+<%= form_for(@order, html: { id: 'payment-form' }) do |form| %>
   <div>
     <%= form.label :username%>
     <%= form.text_field :username%>
@@ -15,4 +17,28 @@
     <%= form.label :address%>
     <%= form.text_field :address%>
   </div>
+
+  <div id="dropin-container"></div>
+  <input type="hidden" id="nonce" name="payment_method_nonce"/>
+
+  <%= form.submit '確認付款' %>
 <% end %>
+
+<script type="text/javascript">
+const form = document.querySelector('#payment-form');
+
+braintree.dropin.create({
+  authorization: '<%= @token %>',
+  container: '#dropin-container'
+}).then(dropinInstance => {
+  form.addEventListener('submit', event => {
+    event.preventDefault();
+    dropinInstance.requestPaymentMethod().then(payload => {
+      document.querySelector('#nonce').value = payload.nonce;
+      form.submit();
+    }).catch(error => { throw error; });
+  });
+}).catch(error => {
+  // handle errors
+});;
+</script>
