--- a/app/views/pages/pricing.html.erb
+++ b/app/views/pages/pricing.html.erb
@@ -1,9 +1,10 @@
 <h1>購買點數卡</h1>
 <ul>
   <% @products.each do |product| %>
-    <li>
+    <li data-controller="pricing" data-pricing-id='<%= product.id %>'>
       <%= product.title %>(<%= product.price %> 元)
-      <%= link_to '加到購物車', add_item_cart_path(product), method: 'post' %>
+      <%= link_to '加到購物車', '#',
+                  data: { action: 'pricing#addToCart' } %>
     </li>
   <% end %>
 </ul>
